# docent-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml  docent.toml  mount_tmpfs.sh  opencode.json  setenv
.github/workflows/: ci.yml
.lissom/tasks/IMPROVE-06/: Impl-record.json  Impl-summary.md
benches/: index_documents.rs  read_index.rs  vector_search.rs
doc/: AGENTS_MOCKING.md  Development.md
doc/addr/: no-long-poll-monitors.md
e2e-tests/: test_mcp.py  test_watch.py
e2e-tests/.ddr-index/: header.json  metadata.json
sandbox/: config.toml
src/: chunking.rs  cli.rs  config.rs  document.rs  documents.rs  embedder.rs  file_index.rs  git_index.rs  index.rs  index_cmd.rs  lib.rs  main.rs  mcp.rs  progress.rs  search.rs  serve_cmd.rs  terminal.rs
src/app/: MODULE.md  application.rs  index_runner.rs  init.rs  list_models.rs  mod.rs
src/app/commands/: index.rs  init.rs  list_models.rs  mod.rs  serve.rs
src/app/index/: indexer.rs  mod.rs  processor.rs  runner.rs  types.rs
src/app/indexing/: chunker.rs  indexer.rs  mod.rs
src/app/init/: command.rs  merge_config.rs  mod.rs
src/app/serve/: MODULE.md  bootstrap.rs  builder.rs  http_server.rs  mcp_server.rs  mod.rs  preflight.rs  server.rs  service_builder.rs
src/app/workflows/: file_index.rs  git_index.rs  mod.rs  runner.rs
src/chunking/: counter.rs  engine.rs  mod.rs  sectioning.rs
src/config/: MODULE.md  defaults.rs  load.rs  migrate.rs  mod.rs  tests.rs  types.rs  validate.rs
src/domain/: documents.rs  mod.rs  vector.rs
src/index/: MODULE.md  bm25_builder.rs  bm25_header.rs  bm25_io.rs  bm25_schema.rs  bm25_storage.rs  embedder.rs  embedder_mock.rs  header.rs  index_loader.rs  kind.rs  merged.rs  merged_index.rs  merger.rs  mod.rs  model_factory.rs  repository.rs  repository_mock.rs  schema.rs  semantic_header.rs  semantic_io.rs  semantic_store.rs  source_index.rs  storage.rs  stored_metadata.rs  sub_index.rs  validation.rs  vector_store.rs
src/indexing/: mod.rs  pipeline.rs  types.rs
src/interfaces/: mcp.rs  mod.rs  search_tool.rs
src/mcp/: mcp_handler.rs  mod.rs  search_tool.rs  server.rs
src/models/: MODULE.md  mod.rs  model.rs  model_factory.rs  model_factory_mock.rs  tokenizer.rs
src/search/: backend.rs  builder.rs  fusion.rs  mod.rs  orchestrator.rs  ranking.rs  service.rs  types.rs
src/sources/: mod.rs
src/support/: fs.rs  glob.rs  mod.rs  progress.rs  time.rs  ui.rs
src/templates/: config.toml  docent.toml
src/tests/: MODULE.md  file_index_tests.rs  fixtures.rs  git_index_tests.rs  index_cmd.rs  mcp.rs  mock_embedder.rs  mock_model_factory.rs  mod.rs  search.rs  serve_tests.rs  workflows.rs
src/ui/: app.css  app.js  handlers.rs  index.html  mcp_client.js  mod.rs  package.json  router.rs  search_api.js  test-setup.js  view.js
src/workflows/: file_index.rs  git_index.rs
tests/: cli_integration_test.rs  index_cmd_integration_test.rs  mcp_integration_test.rs  search_integration_test.rs
(+71 files in other folders)
