[package]
name = "ddr-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.102"
chrono = "=0.4.41"
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
dirs-next = "=2.0.0"
fastembed = { version = "=5.13.4", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
tokenizers = { version = "=0.22.2", default-features = false, features = ["onig"] }
tokio = { version = "=1.52.2", features = ["full"] }
toml = "=0.8.23"
