[package]
name = "docent-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docent"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
axum = { version = "=0.8.8", default-features = false, features = ["http1", "tokio"] }
chrono = "=0.4.41"
clap = { version = "=4.6.1", features = ["derive"] }
dirs-next = "=2.0.0"
fastembed = { version = "=5.13.4", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
rmcp = { version = "=1.6.0", default-features = false, features = ["server", "macros", "transport-streamable-http-server"] }
schemars = { version = "=1.2.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
sha2 = "=0.10.8"
tokenizers = { version = "=0.22.2", default-features = false, features = ["onig"] }
tokio = { version = "=1.52.2", features = ["full"] }
toml = "=0.8.23"
walkdir = "=2.5.0"

[dev-dependencies]
reqwest = { version = "=0.12.26", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "=3.25.0"
